--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.0",
+    "jspdf": "^1.4.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
