--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "html2canvas": "^1.4.1",
-    "jspdf": "^1.4.0",
+    "jspdf": "^3.0.1",
     "moment": "^2.30.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.6",
@@ -30,6 +31,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.16.0",
     "razorpay": "^2.9.6",
     "sharp": "^0.33.5",
     "ulid": "^2.3.0",
